--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,15 +15,15 @@ phases:
       - echo Building the Docker image...
       - docker build -t $REPO_URI:$IMAGE_TAG .
       - docker push $REPO_URI:$IMAGE_TAG
+      
   post_build:
-    commands:
-      - echo Writing image definitions file...
-      - printf '[{"name":"brain-task-app","imageUri":"%s"}]' $REPO_URI:$IMAGE_TAG > imagedefinitions.json
-      - echo Applying manifests to EKS...
-      - aws eks update-kubeconfig --region ap-south-1 --name brain-task-cluster
-      - sed -i "s|<IMAGE_URI>|$REPO_URI:$IMAGE_TAG|g" k8s/deployment.yaml
-      - kubectl apply -f k8s/deployment.yaml
-      - kubectl apply -f k8s/service.yaml
+  commands:
+    - echo "Updating deployment.yaml with new image..."
+    - sed -i "s|<IMAGE_URI>|$REPO_URI:$IMAGE_TAG|g" k8s/deployment.yaml
+    - echo "Deploying to EKS..."
+    - aws eks update-kubeconfig --region ap-south-1 --name brain-task-cluster
+    - kubectl apply -f k8s/deployment.yaml
+    - kubectl apply -f k8s/service.yaml
 
 artifacts:
   files:
